Fix header font-size on mobile

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -30,7 +30,7 @@
         display: none;
     }
     .header input[type="button"] {
-        font-size: 0.9rem;
+        font-size: 1.3rem;
     }
     .header-nav-button {
         margin: 5px 15px;
